select overflow fix

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -111,6 +111,11 @@ button{
     color: white;
 }
 
+.select-dropdown{
+    overflow-y: auto !important;
+}
+
+
 /*******************************************************/
 /*                                                     */
 /*                                                     */
